[project]
name = "clearskies-docs"
version = "0.1.0"
description = "Doc site builder for main clearskies project"
authors = [
    {name = "Conor Mancone",email = "cmancone@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "clear-skies-doc-builder (>=2.0.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
